--- a/index.html
+++ b/index.html
@@ -13,25 +13,26 @@
     }
     body {
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
-      background: linear-gradient(135deg, #0a0a0a, #1c1c1c);
-      color: white;
+      background: linear-gradient(135deg, #e0eafc, #cfdef3);
       min-height: 100vh;
       display: flex;
       flex-direction: column;
       justify-content: space-between;
       align-items: center;
       text-align: center;
+      color: #111;
     }
 
     /* Glass Container */
     .glass {
       margin-top: 15vh;
-      background: rgba(255, 255, 255, 0.05);
+      background: rgba(255, 255, 255, 0.25);
       border-radius: 20px;
       padding: 40px 60px;
-      backdrop-filter: blur(12px) saturate(180%);
-      -webkit-backdrop-filter: blur(12px) saturate(180%);
-      box-shadow: 0 8px 32px rgba(0,0,0,0.4);
+      backdrop-filter: blur(16px) saturate(180%);
+      -webkit-backdrop-filter: blur(16px) saturate(180%);
+      border: 1px solid rgba(255, 255, 255, 0.3);
+      box-shadow: 0 8px 32px rgba(31, 38, 135, 0.2);
       max-width: 800px;
     }
 
@@ -45,13 +46,13 @@
     p.notice {
       font-size: 1.25rem;
       font-weight: 400;
-      opacity: 0.9;
+      opacity: 0.85;
     }
 
     /* Footer */
     footer {
       font-size: 0.9rem;
-      opacity: 0.7;
+      opacity: 0.8;
       padding: 20px;
     }
     footer p {
