--- a/index.html
+++ b/index.html
@@ -5,58 +5,85 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Pasaulinukai Lietuva</title>
   <style>
-    /* Reset & Base */
+    /* Reset */
     * {
       margin: 0;
       padding: 0;
       box-sizing: border-box;
     }
+
+    /* Background */
     body {
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
-      background: linear-gradient(135deg, #e0eafc, #cfdef3);
+      background: radial-gradient(circle at top left, #e0f7fa, #bbdefb, #e1bee7);
       min-height: 100vh;
       display: flex;
       flex-direction: column;
       justify-content: space-between;
       align-items: center;
       text-align: center;
+      overflow: hidden;
       color: #111;
     }
 
-    /* Glass Container */
+    /* Glass Card */
     .glass {
       margin-top: 15vh;
       background: rgba(255, 255, 255, 0.25);
-      border-radius: 20px;
-      padding: 40px 60px;
-      backdrop-filter: blur(16px) saturate(180%);
-      -webkit-backdrop-filter: blur(16px) saturate(180%);
+      border-radius: 24px;
+      padding: 50px 70px;
+      backdrop-filter: blur(18px) saturate(180%);
+      -webkit-backdrop-filter: blur(18px) saturate(180%);
       border: 1px solid rgba(255, 255, 255, 0.3);
-      box-shadow: 0 8px 32px rgba(31, 38, 135, 0.2);
-      max-width: 800px;
+      box-shadow: 0 12px 40px rgba(0,0,0,0.25),
+                  inset 0 0 40px rgba(255,255,255,0.05);
+      max-width: 850px;
+      animation: fadeUp 1.4s ease forwards;
+      opacity: 0;
+      transform: translateY(30px);
     }
 
+    /* Headline */
     h1 {
-      font-size: 3rem;
-      font-weight: 600;
+      font-size: 3.2rem;
+      font-weight: 700;
       letter-spacing: -1px;
       margin-bottom: 20px;
+      background: linear-gradient(90deg, #007aff, #00c6ff, #7b61ff);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      text-shadow: 0 0 12px rgba(123, 97, 255, 0.4),
+                   0 0 30px rgba(0, 198, 255, 0.2);
     }
 
+    /* Notice Text */
     p.notice {
-      font-size: 1.25rem;
+      font-size: 1.3rem;
       font-weight: 400;
-      opacity: 0.85;
+      color: rgba(20, 20, 20, 0.85);
     }
 
     /* Footer */
     footer {
-      font-size: 0.9rem;
-      opacity: 0.8;
-      padding: 20px;
+      font-size: 0.95rem;
+      opacity: 0.85;
+      padding: 25px;
+      animation: fadeIn 2.2s ease forwards;
+      opacity: 0;
     }
     footer p {
-      margin: 4px 0;
+      margin: 5px 0;
+    }
+
+    /* Animations */
+    @keyframes fadeUp {
+      0% { opacity: 0; transform: translateY(30px); }
+      100% { opacity: 1; transform: translateY(0); }
+    }
+
+    @keyframes fadeIn {
+      0% { opacity: 0; }
+      100% { opacity: 1; }
     }
   </style>
 </head>
