--- a/index.html
+++ b/index.html
@@ -5,97 +5,176 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Pasaulinukai Lietuva</title>
   <style>
-    /* Reset */
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-
-    /* Background */
     body {
-      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
-      background: radial-gradient(circle at top left, #e0f7fa, #bbdefb, #e1bee7);
-      min-height: 100vh;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-      align-items: center;
+      margin: 0;
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+      background: linear-gradient(135deg, #0a0a0f, #1a1a22);
+      color: #fff;
+      overflow-x: hidden;
+    }
+    header {
       text-align: center;
-      overflow: hidden;
-      color: #111;
+      padding: 2rem;
+      font-size: 2rem;
+      font-weight: bold;
+      letter-spacing: 2px;
+      color: #e0e0ff;
     }
-
-    /* Glass Card */
-    .glass {
-      margin-top: 15vh;
-      background: rgba(255, 255, 255, 0.25);
-      border-radius: 24px;
-      padding: 50px 70px;
-      backdrop-filter: blur(18px) saturate(180%);
-      -webkit-backdrop-filter: blur(18px) saturate(180%);
-      border: 1px solid rgba(255, 255, 255, 0.3);
-      box-shadow: 0 12px 40px rgba(0,0,0,0.25),
-                  inset 0 0 40px rgba(255,255,255,0.05);
-      max-width: 850px;
-      animation: fadeUp 1.4s ease forwards;
-      opacity: 0;
-      transform: translateY(30px);
+    .glass-panel {
+      max-width: 500px;
+      margin: 2rem auto;
+      padding: 2rem;
+      border-radius: 20px;
+      background: rgba(255, 255, 255, 0.1);
+      box-shadow: 0 4px 30px rgba(0,0,0,0.5);
+      backdrop-filter: blur(20px);
+      -webkit-backdrop-filter: blur(20px);
+      text-align: center;
+      animation: fadeIn 0.8s ease;
     }
-
-    /* Headline */
-    h1 {
-      font-size: 3.2rem;
-      font-weight: 700;
-      letter-spacing: -1px;
-      margin-bottom: 20px;
-      background: linear-gradient(90deg, #007aff, #00c6ff, #7b61ff);
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-      text-shadow: 0 0 12px rgba(123, 97, 255, 0.4),
-                   0 0 30px rgba(0, 198, 255, 0.2);
+    .step {
+      display: none;
     }
-
-    /* Notice Text */
-    p.notice {
-      font-size: 1.3rem;
-      font-weight: 400;
-      color: rgba(20, 20, 20, 0.85);
+    .step.active {
+      display: block;
     }
-
-    /* Footer */
+    button {
+      background: rgba(255,255,255,0.15);
+      border: none;
+      padding: 0.7rem 1.2rem;
+      margin: 0.5rem;
+      border-radius: 12px;
+      color: #fff;
+      font-size: 1rem;
+      cursor: pointer;
+      transition: all 0.2s;
+    }
+    button:hover {
+      background: rgba(255,255,255,0.3);
+      transform: scale(1.05);
+    }
+    input, select {
+      width: 80%;
+      padding: 0.5rem;
+      margin: 1rem 0;
+      border-radius: 10px;
+      border: none;
+      text-align: center;
+    }
     footer {
-      font-size: 0.95rem;
-      opacity: 0.85;
-      padding: 25px;
-      animation: fadeIn 2.2s ease forwards;
-      opacity: 0;
+      text-align: center;
+      padding: 2rem;
+      font-size: 0.9rem;
+      opacity: 0.8;
     }
-    footer p {
-      margin: 5px 0;
+    footer div {
+      margin: 0.3rem 0;
     }
-
-    /* Animations */
-    @keyframes fadeUp {
-      0% { opacity: 0; transform: translateY(30px); }
-      100% { opacity: 1; transform: translateY(0); }
-    }
-
     @keyframes fadeIn {
-      0% { opacity: 0; }
-      100% { opacity: 1; }
+      from {opacity: 0; transform: translateY(20px);}
+      to {opacity: 1; transform: translateY(0);}
+    }
+    /* Mobile-only distortion effect */
+    @media (max-width: 768px) {
+      body.distort {
+        transform: scale(1.02) skewY(1deg);
+        transition: transform 0.3s ease;
+      }
     }
   </style>
 </head>
 <body>
-  <div class="glass">
-    <h1>Pasaulinukai Lietuva</h1>
-    <p class="notice">The website is down.<br>Reason: Naglis nesumokėjo.</p>
+  <header>Pasaulinukai Lietuva</header>
+
+  <div class="glass-panel">
+    <!-- Step 1 -->
+    <div class="step active" id="step1">
+      <h2>Pasirinkite objektą</h2>
+      <input type="text" id="objectInput" placeholder="Įveskite objektą">
+      <div>
+        <button onclick="nextStep(2)">Toliau</button>
+      </div>
+    </div>
+
+    <!-- Step 2 -->
+    <div class="step" id="step2">
+      <h2>Įveskite tekstą (iki 8 raidžių)</h2>
+      <input type="text" id="textInput" maxlength="8" placeholder="Jūsų tekstas">
+      <div>
+        <button onclick="prevStep(1)">Atgal</button>
+        <button onclick="nextStep(3)">Toliau</button>
+        <button onclick="nextStep(3)">Praleisti</button>
+      </div>
+    </div>
+
+    <!-- Step 3 -->
+    <div class="step" id="step3">
+      <h2>Pasirinkite spalvą</h2>
+      <select id="colorSelect">
+        <option value="raudona">Raudona</option>
+        <option value="mėlyna">Mėlyna</option>
+        <option value="juoda">Juoda</option>
+        <option value="balta">Balta</option>
+      </select>
+      <div>
+        <button onclick="prevStep(2)">Atgal</button>
+        <button onclick="nextStep(4)">Toliau</button>
+      </div>
+    </div>
+
+    <!-- Step 4 -->
+    <div class="step" id="step4">
+      <h2>Pridėti daugiau</h2>
+      <div>
+        <button onclick="nextStep(1)">Pridėti dar figūrą</button>
+        <button onclick="showDate()">Pridėti datą</button>
+      </div>
+      <div id="dateContainer" style="margin-top:1rem; display:none;">
+        <input type="date" id="dateInput">
+      </div>
+      <div style="margin-top:1rem;">
+        <button onclick="prevStep(3)">Atgal</button>
+      </div>
+    </div>
   </div>
 
   <footer>
-    <p>All rights reserved Pasaulinukai 2025</p>
-    <p>Svetainė padaryta Airido Naudziaus</p>
+    <div>Pasaulinukai Lietuva</div>
+    <div>All rights reserved Pasaulinukai 2025</div>
+    <div>Svetainė padaryta Airido Naudziaus</div>
   </footer>
+
+  <script>
+    let currentStep = 1;
+
+    function showStep(step) {
+      document.querySelectorAll('.step').forEach(el => el.classList.remove('active'));
+      document.getElementById('step' + step).classList.add('active');
+      currentStep = step;
+    }
+
+    function nextStep(step) {
+      showStep(step);
+    }
+
+    function prevStep(step) {
+      showStep(step);
+    }
+
+    function showDate() {
+      document.getElementById('dateContainer').style.display = 'block';
+    }
+
+    // Mobile distortion effect when scrolled to bottom
+    window.addEventListener('scroll', () => {
+      if (window.innerWidth <= 768) {
+        if (window.innerHeight + window.scrollY >= document.body.offsetHeight - 2) {
+          document.body.classList.add('distort');
+        } else {
+          document.body.classList.remove('distort');
+        }
+      }
+    });
+  </script>
 </body>
 </html>
