--- a/index.html
+++ b/index.html
@@ -5,15 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Pasaulinukai Lietuva</title>
   <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
+    * { margin: 0; padding: 0; box-sizing: border-box; }
 
     body {
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
-      background: radial-gradient(circle at top left, #e0f7fa, #bbdefb, #e1bee7);
+      background: radial-gradient(circle at top left, #b3e5c3, #b3d9ff);
       min-height: 100vh;
       display: flex;
       flex-direction: column;
@@ -56,11 +52,11 @@
       font-size: 2.5rem;
       font-weight: 700;
       letter-spacing: -1px;
-      background: linear-gradient(90deg, #007aff, #00c6ff, #7b61ff);
+      background: linear-gradient(90deg, #4caf93, #66aaff);
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
-      text-shadow: 0 0 12px rgba(123, 97, 255, 0.4),
-                   0 0 30px rgba(0, 198, 255, 0.2);
+      text-shadow: 0 0 12px rgba(102,170,255,0.4),
+                   0 0 30px rgba(76,175,147,0.3);
     }
 
     h2.slogan {
@@ -76,10 +72,7 @@
       font-size: 1.1rem;
       color: rgba(20, 20, 20, 0.85);
     }
-
-    .step.active {
-      display: flex;
-    }
+    .step.active { display: flex; }
 
     input, select, button {
       padding: 12px 16px;
@@ -92,15 +85,12 @@
 
     button {
       cursor: pointer;
-      background: linear-gradient(90deg, #007aff, #00c6ff, #7b61ff);
+      background: linear-gradient(90deg, #4caf93, #66aaff);
       color: white;
       font-weight: 600;
       transition: transform 0.2s ease;
     }
-
-    button:hover {
-      transform: scale(1.05);
-    }
+    button:hover { transform: scale(1.05); }
 
     .btn-row {
       display: flex;
@@ -127,15 +117,12 @@
       opacity: 0;
       text-align: center;
     }
-    footer p {
-      margin: 5px 0;
-    }
+    footer p { margin: 5px 0; }
 
     @keyframes fadeUp {
       0% { opacity: 0; transform: translateY(30px); }
       100% { opacity: 1; transform: translateY(0); }
     }
-
     @keyframes fadeIn {
       0% { opacity: 0; }
       100% { opacity: 1; }
@@ -245,8 +232,6 @@
       alert("Užsakymas baigtas! Ačiū.");
       location.reload();
     }
-
-    // Validation for first step
     function validateAndNext(step) {
       const obj = document.getElementById("object").value.trim();
       if (!obj) {
@@ -255,8 +240,6 @@
       }
       nextStep(step);
     }
-
-    // Mobile-only distortion effect on scroll (stretch)
     if (/Mobi|Android/i.test(navigator.userAgent)) {
       const wrapper = document.getElementById("wrapper");
       window.addEventListener("scroll", () => {
