--- a/index.html
+++ b/index.html
@@ -5,11 +5,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Pasaulinukai Lietuva</title>
   <style>
-    * { margin: 0; padding: 0; box-sizing: border-box; }
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
 
     body {
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
-      background: radial-gradient(circle at top left, #b3e5c3, #b3d9ff);
+      background: linear-gradient(to bottom, #b6e2b6, #c9e9d2, #d4eff0, #cbe7fa);
+      /* top pastel green fading into pastel blue */
       min-height: 100vh;
       display: flex;
       flex-direction: column;
@@ -52,11 +57,11 @@
       font-size: 2.5rem;
       font-weight: 700;
       letter-spacing: -1px;
-      background: linear-gradient(90deg, #4caf93, #66aaff);
+      background: linear-gradient(90deg, #7b61ff, #00c6ff, #007aff);
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
-      text-shadow: 0 0 12px rgba(102,170,255,0.4),
-                   0 0 30px rgba(76,175,147,0.3);
+      text-shadow: 0 0 12px rgba(123, 97, 255, 0.4),
+                   0 0 30px rgba(0, 198, 255, 0.2);
     }
 
     h2.slogan {
@@ -72,7 +77,10 @@
       font-size: 1.1rem;
       color: rgba(20, 20, 20, 0.85);
     }
-    .step.active { display: flex; }
+
+    .step.active {
+      display: flex;
+    }
 
     input, select, button {
       padding: 12px 16px;
@@ -85,12 +93,15 @@
 
     button {
       cursor: pointer;
-      background: linear-gradient(90deg, #4caf93, #66aaff);
+      background: linear-gradient(90deg, #7b61ff, #00c6ff, #007aff);
       color: white;
       font-weight: 600;
       transition: transform 0.2s ease;
     }
-    button:hover { transform: scale(1.05); }
+
+    button:hover {
+      transform: scale(1.05);
+    }
 
     .btn-row {
       display: flex;
@@ -117,12 +128,15 @@
       opacity: 0;
       text-align: center;
     }
-    footer p { margin: 5px 0; }
+    footer p {
+      margin: 5px 0;
+    }
 
     @keyframes fadeUp {
       0% { opacity: 0; transform: translateY(30px); }
       100% { opacity: 1; transform: translateY(0); }
     }
+
     @keyframes fadeIn {
       0% { opacity: 0; }
       100% { opacity: 1; }
@@ -165,11 +179,13 @@
       <div class="step" id="step3">
         <label for="color">Pasirinkite spalvą:</label>
         <select id="color">
+          <option value="pilka">Pilka (numatytoji)</option>
           <option value="raudona">Raudona</option>
           <option value="mėlyna">Mėlyna</option>
           <option value="žalia">Žalia</option>
           <option value="juoda">Juoda</option>
           <option value="balta">Balta</option>
+          <option value="artimiausia">Artimiausia pasirinktui objektui</option>
         </select>
         <div class="btn-row">
           <button onclick="prevStep(2)">Atgal</button>
@@ -232,6 +248,8 @@
       alert("Užsakymas baigtas! Ačiū.");
       location.reload();
     }
+
+    // Validation for first step
     function validateAndNext(step) {
       const obj = document.getElementById("object").value.trim();
       if (!obj) {
@@ -240,13 +258,29 @@
       }
       nextStep(step);
     }
-    if (/Mobi|Android/i.test(navigator.userAgent)) {
-      const wrapper = document.getElementById("wrapper");
-      window.addEventListener("scroll", () => {
-        const scrolled = window.scrollY;
-        wrapper.style.transform = `skewY(${Math.min(scrolled/150,8)}deg)`;
-      });
-    }
+
+    // Liquid glass stretch effect on scroll (deforms when overscrolling)
+    const wrapper = document.getElementById("wrapper");
+    let startY = 0;
+    let isTouching = false;
+
+    window.addEventListener("touchstart", e => {
+      startY = e.touches[0].clientY;
+      isTouching = true;
+    });
+
+    window.addEventListener("touchmove", e => {
+      if (!isTouching) return;
+      let deltaY = e.touches[0].clientY - startY;
+      if ((window.scrollY <= 0 && deltaY > 0) || (window.innerHeight + window.scrollY >= document.body.offsetHeight && deltaY < 0)) {
+        wrapper.style.transform = `scaleY(${1 + Math.abs(deltaY)/600})`;
+      }
+    });
+
+    window.addEventListener("touchend", () => {
+      wrapper.style.transform = "scaleY(1)";
+      isTouching = false;
+    });
   </script>
 </body>
 </html>
