--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
 
     body {
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
-      background: linear-gradient(to bottom, #b6e2b6, #c9e9d2, #d4eff0, #cbe7fa);
-      /* top pastel green fading into pastel blue */
+      background: linear-gradient(to bottom, #a8e6a3, #a8d8f0);
       min-height: 100vh;
       display: flex;
       flex-direction: column;
@@ -57,7 +56,7 @@
       font-size: 2.5rem;
       font-weight: 700;
       letter-spacing: -1px;
-      background: linear-gradient(90deg, #7b61ff, #00c6ff, #007aff);
+      background: linear-gradient(90deg, #007aff, #00c6ff, #7b61ff);
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
       text-shadow: 0 0 12px rgba(123, 97, 255, 0.4),
@@ -93,7 +92,7 @@
 
     button {
       cursor: pointer;
-      background: linear-gradient(90deg, #7b61ff, #00c6ff, #007aff);
+      background: linear-gradient(90deg, #007aff, #00c6ff, #7b61ff);
       color: white;
       font-weight: 600;
       transition: transform 0.2s ease;
@@ -127,6 +126,7 @@
       animation: fadeIn 2.2s ease forwards;
       opacity: 0;
       text-align: center;
+      transition: transform 0.2s ease-out;
     }
     footer p {
       margin: 5px 0;
@@ -179,13 +179,13 @@
       <div class="step" id="step3">
         <label for="color">Pasirinkite spalvą:</label>
         <select id="color">
-          <option value="pilka">Pilka (numatytoji)</option>
+          <option value="pilka" selected>Pilka (numatytoji)</option>
           <option value="raudona">Raudona</option>
           <option value="mėlyna">Mėlyna</option>
           <option value="žalia">Žalia</option>
           <option value="juoda">Juoda</option>
           <option value="balta">Balta</option>
-          <option value="artimiausia">Artimiausia pasirinktui objektui</option>
+          <option value="artimiausia">Artimiausia pasirinktam objektui</option>
         </select>
         <div class="btn-row">
           <button onclick="prevStep(2)">Atgal</button>
@@ -222,7 +222,7 @@
     </div>
   </div>
 
-  <footer>
+  <footer id="footer">
     <p>All rights reserved Pasaulinukai 2025</p>
     <p>Svetainė padaryta Airido Naudziaus</p>
   </footer>
@@ -259,28 +259,18 @@
       nextStep(step);
     }
 
-    // Liquid glass stretch effect on scroll (deforms when overscrolling)
-    const wrapper = document.getElementById("wrapper");
-    let startY = 0;
-    let isTouching = false;
+    // Mobile-only deformation effect (wrapper + footer)
+    if (/Mobi|Android/i.test(navigator.userAgent)) {
+      const wrapper = document.getElementById("wrapper");
+      const footer = document.getElementById("footer");
 
-    window.addEventListener("touchstart", e => {
-      startY = e.touches[0].clientY;
-      isTouching = true;
-    });
-
-    window.addEventListener("touchmove", e => {
-      if (!isTouching) return;
-      let deltaY = e.touches[0].clientY - startY;
-      if ((window.scrollY <= 0 && deltaY > 0) || (window.innerHeight + window.scrollY >= document.body.offsetHeight && deltaY < 0)) {
-        wrapper.style.transform = `scaleY(${1 + Math.abs(deltaY)/600})`;
-      }
-    });
-
-    window.addEventListener("touchend", () => {
-      wrapper.style.transform = "scaleY(1)";
-      isTouching = false;
-    });
+      window.addEventListener("scroll", () => {
+        const scrolled = window.scrollY;
+        const skew = Math.min(scrolled / 150, 8);
+        wrapper.style.transform = `skewY(${skew}deg)`;
+        footer.style.transform = `skewY(${skew}deg)`;
+      });
+    }
   </script>
 </body>
 </html>
