--- a/index.html
+++ b/index.html
@@ -39,6 +39,13 @@
       background: linear-gradient(90deg, #007aff, #00c6ff, #7b61ff);
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
+      animation: stretch 1.2s ease-out both; /* stretch effect */
+    }
+    @keyframes stretch {
+      0% {transform: scaleX(1) scaleY(1);}
+      30% {transform: scaleX(1.3) scaleY(0.8);}
+      60% {transform: scaleX(0.9) scaleY(1.1);}
+      100% {transform: scaleX(1) scaleY(1);}
     }
     h2.slogan {
       font-size: 1.2rem;
@@ -72,7 +79,10 @@
       font-weight:600;
       transition:transform 0.2s ease;
     }
-    button:hover {transform:scale(1.05);}
+    /* Stretch effect on hover */
+    button:hover {
+      animation: stretch 0.6s ease both;
+    }
     .btn-row {display:flex;gap:10px;flex-wrap:wrap;}
     .prototype-message {
       background:rgba(255,255,255,0.3);
